# jira-agntcy-agent

./: .gitignore  CONTRIBUTING.md  Dockerfile  MAINTAINERS.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt  run_eval.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  dependency.yml  docker-build-push.yaml  helm-push.yaml  lint.yml
app/: langgraph_studio_run_jira_workflow.py  main.py  run_tests.sh
app/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
app/api/routes/: policy.py  policy_sample.json  stateless_runs.py
app/core/: config.py  llm.py
app/graph/: graph.py
app/issues_agent/: issues_agent.py  issues_models.py  issues_tools.py  search_tools.py  transitions_tools.py
app/jira_client/: client.py  config.py
app/models/: models.py
app/projects_agent/: projects_agent.py  projects_models.py  projects_tools.py  projects_utils.py
app/projects_agent/dryrun/: mock_responses.py
app/supervisor_agent/: supervisor_agent.py
app/tests/: .env.sample  helper.py  projects_helper.py  test_apis_policy.py  test_prompts_issues.py  test_prompts_projects.py  utils.py
app/tests/dev/: projects_helper.py
app/users_agent/: users_agent.py  users_models.py  users_tools.py
app/utils/: jira_utils.py
client/: logging_config.py  rest.py  sample_prompts_issues  sample_prompts_projects
client/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
client/sample_prompts/: sample_prompts_issues
clients/acp_client/: .env.sample  api_request_stateless_run_wait.sh  client.py  client_async.py  client_rest.sh
clients/ap_client/: client.py  langgraph.json  logging_config.py
clients/sample_prompts/: sample_prompts_issues  sample_prompts_projects
deploy_acp/: README.md  jira_agent.json  jira_agent_env_example.yaml
deployments/helm/jira-agntcy-agent/: Chart.yaml  values.yaml
eval/: EVAL_README.md  README.md  eval_requirements.txt  jira_correctness_evaluation_readme.md  readme_jira_correctness_evaluation.md  requirements.txt  trajectory_evaluation_README.md
eval/configs/: generate_trajectory.yaml  generate_trajectory_config.yaml  strict_match_config.yaml
eval/jira_correctness_evaluation/code/: correctness_eval.py  jira_action_replay.py  key_generation.py
eval/jira_correctness_evaluation/configs/: correctness_eval_config.yml  correctness_eval_config_o1.yml  jira_action_replay_config.yml  key_generation_config.yml
eval/jira_correctness_evaluation_reports/: report_file_gpt-4o.md
eval/llm_as_judge/: prompt_dataset.csv  test_jarvis_agent_llm_as_judge.py
eval/reports/: report_file_o1.md
eval/strict_match/: README.md  generateReferenceTrajectory.py  runStrictMatch.py  strict_match_dataset.yaml  test_strict_match.py  traject_evaluation.py
jira_agent/: build_graph.py  langgraph.json  main.py
jira_agent/agents/issues_agent/: agent.py  prompt.py
jira_agent/agents/projects_agent/: agent.py  prompt.py
jira_agent/agents/supervisor_agent/: prompt.py  state.py  supervisor_agent.py
jira_agent/agents/users_agent/: users_agent.py  users_models.py  users_tools.py
jira_agent/common/: llm.py  logging_config.py
jira_agent/graph/: graph.py
jira_agent/langgraph/: langgraph_server.py
jira_agent/utils/jira_client/: config.py  rest.py
manifest/: README.md  generate_manifest.py  jira_agent_manifest.json
src/: langgraph.json  main.py  run_tests.sh  run_tests_dev.sh
src/agents/issues_agent/: agent.py  prompt.py
src/agents/projects_agent/: agent.py  prompt.py
src/agncty_agents_common/: globals.py
src/agntcy_agents_common/: config.py  jira_settings.py  llm.py  llm_factory.py  logging_config.py  models.py  setup_logging.py
src/common/: config.py  llm.py  logging_config.py
src/graph/: graph.py
src/langgraph/: langgraph_server.py
src/models/: models.py
src/utils/: dryrun_utils.py  jira_utils.py
tests/: helper.py
tests/dev/: .env.dev.sample  projects_helper.py  test_prompts_projects_dev.py
(+51 files in other folders)
